grammar.js
    program: $ => seq(
        $._start,
        repeat(choice($._expression, $._semicolon, $._newline))
    ),

    // Function definitions.
    subset: $ => withPrec(PREC.CALL, seq(
      field("function", $._expression),
      field("arguments", alias($.subset_arguments, $.arguments))
    )),

    subset2: $ => withPrec(PREC.CALL, seq(
      field("function", $._expression),
      field("arguments", alias($.subset2_arguments, $.arguments))
    )),

    // The actual matching rules for arguments in each of the above.
    //
    // Complicated by the fact that we want to support any number
    // of sequential commas, but two arguments must be separated
    // by at least one comma.
    //
    // We accomplish this by using `delimSep1()`, but we make the
    // actual `rule` itself `optional()`.
    //
    // # Allowed
    // fn()
    // fn(,)
    // fn(,,)
    // fn(a)
    // fn(a, b)
    // fn(,,a,,b,,)
    //
    // # Not allowed
    // fn(a b)
    //
    // NOTE: See `NOTE ON NEWLINES BETWEEN PARENTHESES` above
    argument: $ => choice(
      $._argument_named,
      $._argument_unnamed
    ),

    // Note that the value is optional, i.e. both of these are valid:
    // fn(a = 1)
    // fn(a = )
    _argument_named: $ => seq(
      field("name", $._argument_name_string_or_identifier_or_null),
      "=",
      optional($._argument_value)
    ),

    _argument_unnamed: $ => $._argument_value,

    float: $ => $._float_literal,

    // NOTE: See `?NumericConstants` for precise details
    //
    // For hexadecimal:
    // - '0'
    // - 'x' or 'X'
    // - Non-empty sequence of '[0-9a-fA-F.]' restricted to at most 1 '.'
    //   - LHS `([0-9a-fA-F]+(\.[0-9a-fA-F]*)?)` handles 0x1, 0x1.2
    //   - RHS `(\.[0-9a-fA-F]*)` handles 0x.1, and 0x. (surprisingly R allows this)
    // - Optional binary exponent of:
    //   - 'p' or 'P'
    //   - Optional '+' or '-'
    //   - Non-empty sequence of '[0-9]'
    _float_literal: $ => choice($._hex_literal, $._number_literal),

    // Strings.
    string: $ => choice(
      $._raw_string_literal,
      $._single_quoted_string,
      $._double_quoted_string
    ),

    // TODO: Raw string contents, something like this, where `_raw_string_open`,
    // `_raw_string_close`, and `_raw_string_content` are externals.
    // _raw_string_literal: $ => seq(
    //   field("open", $._raw_string_open),
    //   optional(field("content", alias($._raw_string_content, $.string_content))),
    //   field("close", $._raw_string_close)
    // ),

    // Explanation is:
    // - Between two quote characters, allow either:
    //   - Anything except `'` (or `"`) or `\`
    //   - An escape sequence
    _single_quoted_string: $ => seq(
      field("open", '\''),
      optional(field("content", alias($._single_quoted_string_content, $.string_content))),
      field("close", '\'')
    ),

    _double_quoted_string: $ => seq(
      field("open", '"'),
      optional(field("content", alias($._double_quoted_string_content, $.string_content))),
      field("close", '"')
    ),

    escape_sequence: $ => token.immediate(seq(
      '\\',
      choice(
        /[^0-9xuU]/,
        /[0-7]{1,3}/,
        /x[0-9a-fA-F]{1,2}/,
        /u[0-9a-fA-F]{1,4}/,
        /u\{[0-9a-fA-F]{1,4}\}/,
        /U[0-9a-fA-F]{1,8}/,
        /U\{[0-9a-fA-F]{1,8}\}/
      )
    )),

    // NOTE: The ordering here matters. Since `identifier` would match both
    // `dots` and `dot_dot_i` and everyone has the same precedence (of 0),
    // we must put `dots` and `dot_dot_i` first in the grammar itself to
    // allow them to match first.
    identifier: $ => {
      const _unquoted_identifier = /[\p{XID_Start}._][\p{XID_Continue}.]*/;
      const _quoted_identifier = /`((?:\\(.|\n))|[^`\\])*`/;

      return token(
        choice(
          _unquoted_identifier,
          _quoted_identifier
        )
      )
    },

    // NOTE: This is the actual "identifier" used throughout the grammar. R
    // treats `...` and `..i` exactly the same as any other `identifier`
    // throughout the R grammar. In theory, we could collapse `dots` and
    // `dot_dot_i` into `identifier`, but downstream consumers sometimes
    // highlight `dots` and `dot_dot_i` differently than other identifiers. This
    // is supported by the fact that `...` and `..i` are "reserved words" in R,
    // see `?Reserved`. We also considered nesting `dots` and `dot_dot_i` as
    // children under `identifier`, but that is complicated by the fact that we
    // use `identifier` as the `word`, so it needs to be a token (#157, #176).
    _expression: $ => choice(
      $.function_definition,

      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.repeat_statement,

      $.braced_expression,
      $.parenthesized_expression,

      $.call,
      $.subset,
      $.subset2,

      $.unary_operator,
      $.binary_operator,
      $.extract_operator,
      $.namespace_operator,

      $.integer,
      $.complex,
      $.float,

      $.string,

      $.identifier,
      $.dots,
      $.dot_dot_i,

      $.next,
      $.break,
      $.true,
      $.false,
      $.null,
      $.inf,
      $.nan,
      $.na
    ),

    // Comments.
    comment: $ => token(withPrec(PREC.COMMENT, /#.*/)),

    // Commas. We include these in the AST so we can figure out the
    // argument call position. This is necessary given how R tolerates
    // missing arguments in function calls.
