test/corpus/errors.txt
================================================================================
Closing Brace
================================================================================

}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '}')))

================================================================================
Closing Parenthesis
================================================================================

)

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED ')')))

================================================================================
Closing Bracket
================================================================================

]

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED ']')))

================================================================================
Opening Brace, Closing Parenthesis
================================================================================

# Parenthesis is "not valid" so it isn't matched by the external scanner
{)

--------------------------------------------------------------------------------

(program
  (comment)
  (ERROR
    (UNEXPECTED ')')))

================================================================================
Opening Parenthesis, Closing Brace
================================================================================

(}

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '}')))

================================================================================
Opening Parenthesis, Closing Bracket
================================================================================

(]

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED ']')))

================================================================================
Opening Bracket2, Unmatched Closing Bracket
================================================================================

x[[2]

--------------------------------------------------------------------------------

(program
  (identifier)
  (ERROR
    (UNEXPECTED ']')))

================================================================================
Opening Bracket and Bracket2, Unmatched Closing Bracket
================================================================================

x[y[[2]

--------------------------------------------------------------------------------

(program
  (identifier)
  (ERROR
    (identifier)
    (UNEXPECTED ']')))

================================================================================
Opening Bracket2 and Bracket, Matched Closing Bracket
================================================================================

x[[y[2]

--------------------------------------------------------------------------------

(program
  (subset2
    function: (identifier)
    arguments: (arguments
      argument: (argument
        value: (subset
          function: (identifier)
          arguments: (arguments
            argument: (argument
              value: (float)))))
      close: (MISSING "]]"))))

================================================================================
Opening Bracket2 and Bracket, Unmatched Closing Bracket
================================================================================

x[[y[2]]

--------------------------------------------------------------------------------

(program
  (identifier)
  (ERROR
    (subset
      function: (identifier)
      arguments: (arguments
        argument: (argument
          value: (float))))
    (UNEXPECTED ']')))
