test/corpus/literals-errors.txt
================================================================================
Unclosed Double Quote
================================================================================
"\"

--------------------------------------------------------------------------------

(program
  (string
    (string_content
      (escape_sequence))
    (MISSING """)))

================================================================================
Unclosed Single Quote
================================================================================
'\'

--------------------------------------------------------------------------------

(program
  (string
    (string_content
      (escape_sequence))
    (MISSING "'")))

================================================================================
Unclosed Backtick
================================================================================
`\`

--------------------------------------------------------------------------------

(program
  (ERROR
    (UNEXPECTED '\0')))

================================================================================
Unclosed Raw String
================================================================================
r"(
"

--------------------------------------------------------------------------------

(program
  (ERROR))
